Fix package view error on mobile devices (#796)

--- a/web/src/layout/App.css
+++ b/web/src/layout/App.css
@@ -21,3 +21,24 @@ select:focus {
   height: 100%;
   overflow: hidden;
 }
+
+@media only screen and (max-width: 991.98px) {
+  .noScroll-sidebar.noScroll-lg,
+  .noScroll-modal.noScroll-lg {
+    overflow: auto !important;
+  }
+}
+
+@media only screen and (max-width: 767.98px) {
+  .noScroll-sidebar.noScroll-md,
+  .noScroll-modal.noScroll-md {
+    overflow: auto !important;
+  }
+}
+
+@media only screen and (max-width: 575.98px) {
+  .noScroll-sidebar.noScroll-sm,
+  .noScroll-modal.noScroll-sm {
+    overflow: auto !important;
+  }
+}
